documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API VOID __stdcall C41_DataClear(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_DataGet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_DataRead(USHORT addrval,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_DataSet(USHORT maskval,USHORT addrval,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_DataWrite(USHORT value,USHORT addrval,INT channum,HCARD handleval);

C41W32API ULONG __stdcall C41_Div(ULONG diva,ULONG divb);

C41W32API USHORT __stdcall C41_DPMIAllocSel(USHORT segval);

C41W32API ULONG __stdcall C41_DPMIDosAlloc(USHORT paras);

C41W32API USHORT __stdcall C41_DPMIDosFree(USHORT selector);

C41W32API VOID __stdcall C41_DPMIFreeSel(USHORT selector);

C41W32API USHORT __stdcall C41_DPMIIntSim(USHORT intnum,LPVOID dpmireg);

C41W32API USHORT __stdcall C41_DPMIPresent(VOID);

C41W32API INT __stdcall C41_DspIntmClear(HCARD handleval);

C41W32API INT __stdcall C41_DspIntmSet(HCARD handleval);

C41W32API INT __stdcall C41_DspXfClear(HCARD handleval);

C41W32API INT __stdcall C41_DspXfSet(HCARD handleval);

C41W32API LPCSTR __stdcall C41_ErrDesc(INT errval);

C41W32API LPCSTR __stdcall C41_ErrDescStr(INT errval);

C41W32API LPCSTR __stdcall C41_ErrName(INT errval);

C41W32API VOID __stdcall C41_ExpandMant(LPLONG mant,LPINT exp);

C41W32API INT __stdcall C41_ExtDinWr(INT dinvalue,INT channum,HCARD handleval);

C41W32API VOID __stdcall C41_FileClose(INT handle);

C41W32API BOOL __stdcall C41_FileErr(VOID);

C41W32API VOID __stdcall C41_FileErrClr(VOID);

C41W32API VOID __stdcall C41_FileErrSet(VOID);

C41W32API BOOL __stdcall C41_FileOpenRead(LPCSTR filename);

C41W32API BOOL __stdcall C41_FileOpenWrite(LPCSTR filename);

C41W32API BOOL __stdcall C41_FileRead(INT handle,LPVOID buffer,USHORT count);

C41W32API BOOL __stdcall C41_FileSeek(INT handle,ULONG offset);

C41W32API ULONG __stdcall C41_FileTell(INT handle);

C41W32API BOOL __stdcall C41_FileWrite(INT handle,LPVOID buffer,USHORT count);

C41W32API USHORT __stdcall C41_FilterAddr(INT labelval,INT sdival,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterClear(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterFill(LPUSHORT msgaddr,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterRd(LPUSHORT msgaddr,INT labelval,INT sdival,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterWipe(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_FilterWr(LPUSHORT msgaddr,INT labelval,INT sdival,INT channum,HCARD handleval);

C41W32API USHORT __stdcall C41_FldGetParBit(ULONG msgval);

C41W32API USHORT __stdcall C41_GetHigh(ULONG val);

C41W32API USHORT __stdcall C41_GetLow(ULONG val);

C41W32API USHORT __stdcall C41_GlobalRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_GlobalWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_HandleAssign(USHORT sizval,USHORT memval,USHORT ioval,USHORT irqval,INT cardnum);

C41W32API ERRVAL __stdcall C41_HandleClose(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HandleDel(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HandleGet(LPUSHORT sizval,LPUSHORT memval,LPUSHORT ioval,LPUSHORT irqval,HCARD handleval);

C41W32API HCARD __stdcall C41_HandleIns(LPCSTR cardname,INT rcvcount,INT xmtcount,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

C41W32API USHORT __stdcall C41_HandleOkay(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HandleOpen(LPCSTR cardname,INT rcvcount,INT xmtcount,INT cardnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_HandleVer(HCARD handleval);

C41W32API USHORT __stdcall C41_HeapAlloc(USHORT wordcount,HCARD handleval);

C41W32API ERRVAL __stdcall C41_HeapCheck(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HeapClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_HeapWipe(HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitFilt(USHORT chanflag,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitHeap(USHORT heapsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitInt(USHORT intsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitMsg(USHORT msgcount,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitSch(USHORT chancount,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_InitSeq(USHORT seqsize,HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTDisable(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTEnable(HCARD handleval);

C41W32API ERRVAL __stdcall C41_INTEnableCond(HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntInstall(LPVOID hEvent,HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntUninstall(HCARD handleval);

C41W32API ERRVAL __stdcall C41_IntWipe(HCARD handleval);

C41W32API ERRVAL __stdcall C41_Invoke(HCARD handleval);

C41W32API ERRVAL __stdcall C41_Invokee(HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPRdsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPRdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPWrsW(LPUSHORT bufptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEEPWrW(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernEnd(LPVOID vxdptr);

C41W32API ERRVAL __stdcall C41_KernIntInstall(LPVOID hEvent,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIntParam(ULONG clraddr,ULONG clrwidth,ULONG clrvalue,ULONG stataddr,ULONG statwidth,ULONG statvalue,ULONG statmask,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIntUninstall(HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIORdW(LPUSHORT valueptr,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernIOWrW(USHORT value,USHORT addrval,HCARD handleval);

C41W32API ERRVAL __stdcall C41_KernMEMFillW(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);