documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.VB

    Public Declare Sub C41_DataClear Lib "C41W32.DLL" Alias "_C41_DataClear@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_DataGet Lib "C41W32.DLL" Alias "_C41_DataGet@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_DataRead Lib "C41W32.DLL" Alias "_C41_DataRead@12" (ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_DataSet Lib "C41W32.DLL" Alias "_C41_DataSet@16" (ByVal maskval As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Sub C41_DataWrite Lib "C41W32.DLL" Alias "_C41_DataWrite@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_Div Lib "C41W32.DLL" Alias "_C41_Div@8" (ByVal diva As UInt32, ByVal divb As UInt32) As UInt32
    Public Declare Function C41_DPMIAllocSel Lib "C41W32.DLL" Alias "_C41_DPMIAllocSel@4" (ByVal segval As UInt16) As UInt16
    Public Declare Function C41_DPMIDosAlloc Lib "C41W32.DLL" Alias "_C41_DPMIDosAlloc@4" (ByVal paras As UInt16) As UInt32
    Public Declare Function C41_DPMIDosFree Lib "C41W32.DLL" Alias "_C41_DPMIDosFree@4" (ByVal selector As UInt16) As UInt16
    Public Declare Sub C41_DPMIFreeSel Lib "C41W32.DLL" Alias "_C41_DPMIFreeSel@4" (ByVal selector As UInt16)
    Public Declare Function C41_DPMIIntSim Lib "C41W32.DLL" Alias "_C41_DPMIIntSim@8" (ByVal intnum As UInt16, ByVal dpmireg As IntPtr) As UInt16
    Public Declare Function C41_DPMIPresent Lib "C41W32.DLL" Alias "_C41_DPMIPresent@0" () As UInt16
    Public Declare Function C41_DspIntmClear Lib "C41W32.DLL" Alias "_C41_DspIntmClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_DspIntmSet Lib "C41W32.DLL" Alias "_C41_DspIntmSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_DspXfClear Lib "C41W32.DLL" Alias "_C41_DspXfClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_DspXfSet Lib "C41W32.DLL" Alias "_C41_DspXfSet@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ErrDesc Lib "C41W32.DLL" Alias "_C41_ErrDesc@4" (ByVal errval As Int32) As UInt32
    Public Declare Function C41_ErrDescStr Lib "C41W32.DLL" Alias "_C41_ErrDescStr@4" (ByVal errval As Int32) As UInt32
    Public Declare Function C41_ErrName Lib "C41W32.DLL" Alias "_C41_ErrName@4" (ByVal errval As Int32) As UInt32
    Public Declare Sub C41_ExpandMant Lib "C41W32.DLL" Alias "_C41_ExpandMant@8" (ByRef mant As Int32, ByRef exp As Int32)
    Public Declare Function C41_ExtDinWr Lib "C41W32.DLL" Alias "_C41_ExtDinWr@12" (ByVal dinvalue As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Sub C41_FileClose Lib "C41W32.DLL" Alias "_C41_FileClose@4" (ByVal handle As Int32)
    Public Declare Function C41_FileErr Lib "C41W32.DLL" Alias "_C41_FileErr@0" () As Int32
    Public Declare Sub C41_FileErrClr Lib "C41W32.DLL" Alias "_C41_FileErrClr@0" ()
    Public Declare Sub C41_FileErrSet Lib "C41W32.DLL" Alias "_C41_FileErrSet@0" ()
    Public Declare Function C41_FileOpenRead Lib "C41W32.DLL" Alias "_C41_FileOpenRead@4" (ByRef filename As String) As Int32
    Public Declare Function C41_FileOpenWrite Lib "C41W32.DLL" Alias "_C41_FileOpenWrite@4" (ByRef filename As String) As Int32
    Public Declare Function C41_FileRead Lib "C41W32.DLL" Alias "_C41_FileRead@12" (ByVal handle As Int32, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function C41_FileSeek Lib "C41W32.DLL" Alias "_C41_FileSeek@8" (ByVal handle As Int32, ByVal offset As UInt32) As Int32
    Public Declare Function C41_FileTell Lib "C41W32.DLL" Alias "_C41_FileTell@4" (ByVal handle As Int32) As UInt32
    Public Declare Function C41_FileWrite Lib "C41W32.DLL" Alias "_C41_FileWrite@12" (ByVal handle As Int32, ByVal buffer As IntPtr, ByVal count As UInt16) As Int32
    Public Declare Function C41_FilterAddr Lib "C41W32.DLL" Alias "_C41_FilterAddr@16" (ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_FilterClear Lib "C41W32.DLL" Alias "_C41_FilterClear@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FilterFill Lib "C41W32.DLL" Alias "_C41_FilterFill@12" (ByRef msgaddr As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FilterRd Lib "C41W32.DLL" Alias "_C41_FilterRd@20" (ByRef msgaddr As UInt16, ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FilterWipe Lib "C41W32.DLL" Alias "_C41_FilterWipe@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FilterWr Lib "C41W32.DLL" Alias "_C41_FilterWr@20" (ByRef msgaddr As UInt16, ByVal labelval As Int32, ByVal sdival As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_FldGetParBit Lib "C41W32.DLL" Alias "_C41_FldGetParBit@4" (ByVal msgval As UInt32) As UInt16
    Public Declare Function C41_GetHigh Lib "C41W32.DLL" Alias "_C41_GetHigh@4" (ByVal val As UInt32) As UInt16
    Public Declare Function C41_GetLow Lib "C41W32.DLL" Alias "_C41_GetLow@4" (ByVal val As UInt32) As UInt16
    Public Declare Function C41_GlobalRd Lib "C41W32.DLL" Alias "_C41_GlobalRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_GlobalWr Lib "C41W32.DLL" Alias "_C41_GlobalWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_HandleAssign Lib "C41W32.DLL" Alias "_C41_HandleAssign@20" (ByVal sizval As UInt16, ByVal memval As UInt16, ByVal ioval As UInt16, ByVal irqval As UInt16, ByVal cardnum As Int32) As Int32
    Public Declare Function C41_HandleClose Lib "C41W32.DLL" Alias "_C41_HandleClose@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HandleDel Lib "C41W32.DLL" Alias "_C41_HandleDel@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HandleGet Lib "C41W32.DLL" Alias "_C41_HandleGet@20" (ByRef sizval As UInt16, ByRef memval As UInt16, ByRef ioval As UInt16, ByRef irqval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HandleIns Lib "C41W32.DLL" Alias "_C41_HandleIns@24" (ByRef cardname As String, ByVal rcvcount As Int32, ByVal xmtcount As Int32, ByVal cardnum As Int32, ByVal happwnd As IntPtr, ByVal uiremovalmsg As UInt16) As UInt32
    Public Declare Function C41_HandleOkay Lib "C41W32.DLL" Alias "_C41_HandleOkay@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_HandleOpen Lib "C41W32.DLL" Alias "_C41_HandleOpen@20" (ByRef cardname As String, ByVal rcvcount As Int32, ByVal xmtcount As Int32, ByVal cardnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HandleVer Lib "C41W32.DLL" Alias "_C41_HandleVer@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HeapAlloc Lib "C41W32.DLL" Alias "_C41_HeapAlloc@8" (ByVal wordcount As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_HeapCheck Lib "C41W32.DLL" Alias "_C41_HeapCheck@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HeapClear Lib "C41W32.DLL" Alias "_C41_HeapClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_HeapWipe Lib "C41W32.DLL" Alias "_C41_HeapWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitFilt Lib "C41W32.DLL" Alias "_C41_InitFilt@12" (ByVal chanflag As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitHeap Lib "C41W32.DLL" Alias "_C41_InitHeap@8" (ByVal heapsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitInt Lib "C41W32.DLL" Alias "_C41_InitInt@8" (ByVal intsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitMsg Lib "C41W32.DLL" Alias "_C41_InitMsg@8" (ByVal msgcount As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitSch Lib "C41W32.DLL" Alias "_C41_InitSch@12" (ByVal chancount As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_InitSeq Lib "C41W32.DLL" Alias "_C41_InitSeq@8" (ByVal seqsize As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_IntClear Lib "C41W32.DLL" Alias "_C41_IntClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_INTDisable Lib "C41W32.DLL" Alias "_C41_INTDisable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_INTEnable Lib "C41W32.DLL" Alias "_C41_INTEnable@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_INTEnableCond Lib "C41W32.DLL" Alias "_C41_INTEnableCond@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_IntInstall Lib "C41W32.DLL" Alias "_C41_IntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_IntUninstall Lib "C41W32.DLL" Alias "_C41_IntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_IntWipe Lib "C41W32.DLL" Alias "_C41_IntWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_Invoke Lib "C41W32.DLL" Alias "_C41_Invoke@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_Invokee Lib "C41W32.DLL" Alias "_C41_Invokee@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernEEPRdsW Lib "C41W32.DLL" Alias "_C41_KernEEPRdsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernEEPRdW Lib "C41W32.DLL" Alias "_C41_KernEEPRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernEEPWrsW Lib "C41W32.DLL" Alias "_C41_KernEEPWrsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernEEPWrW Lib "C41W32.DLL" Alias "_C41_KernEEPWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernEnd Lib "C41W32.DLL" Alias "_C41_KernEnd@4" (ByVal vxdptr As IntPtr) As Int32
    Public Declare Function C41_KernIntInstall Lib "C41W32.DLL" Alias "_C41_KernIntInstall@8" (ByVal hevent As IntPtr, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernIntParam Lib "C41W32.DLL" Alias "_C41_KernIntParam@32" (ByVal clraddr As UInt32, ByVal clrwidth As UInt32, ByVal clrvalue As UInt32, ByVal stataddr As UInt32, ByVal statwidth As UInt32, ByVal statvalue As UInt32, ByVal statmask As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernIntUninstall Lib "C41W32.DLL" Alias "_C41_KernIntUninstall@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernIORdW Lib "C41W32.DLL" Alias "_C41_KernIORdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernIOWrW Lib "C41W32.DLL" Alias "_C41_KernIOWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernMEMFillW Lib "C41W32.DLL" Alias "_C41_KernMEMFillW@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
